# cfmbot

./: .gitignore  Makefile  README.md  discord-bot.py  pyproject.toml  tgbot.py
common/: utils.py
models/: mgo_models.py
