[tool.poetry]
name = "seyyedlive"
version = "0.1.0"
description = "cloud file manager for techmir bootcamp"
authors = ["AmirEsfandiari <Amir.malek.esfandiari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.3.2"
aiogram = "^3.4.1"
aggify = "^0.3.8"
mongoengine = "^0.28.2"
dynaconf = "^3.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
